Only platform loader and boot loader classes should be flagged as enabled by default. added module resolution time warning/error. Order of jlink plugins solved by using Plugin category.